Fixed alignmentbug on ContactInfoSection during mobile use. Also did minor styling in AboutSection.

--- a/src/components/AboutSection.scss
+++ b/src/components/AboutSection.scss
@@ -76,7 +76,7 @@
 
   .about-text-container{
     background-color: rgb(255, 255, 255);
-    margin-top: 2%;
+    margin-top: 2vw;
     width: 50%;
     min-width: 400px;
     height: flex;
